--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -65,3 +65,28 @@ footer div {
 footer a {
     color: #024e76;
 }
+
+
+section {
+    padding: 60px;
+}
+
+
+.hero {
+    background-image: url("../images/hero-bg.jpg");
+    height: 600px;
+    background-size: cover;
+    background-position: center;
+    position: relative; 
+}
+
+.hero-form {
+    border: 3px solid #024e76;
+    color:#024e76;
+    background-color:#fce138;
+    width: 500px;
+    padding: 20px;
+    position: absolute;
+    bottom: 120px;
+    right: 140px;
+}
